--- a/index.html
+++ b/index.html
@@ -9,134 +9,141 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>TOP</li>
-                <li>VISION</li>
-                <li>MESSAGE</li>
-                <li>SERVISE</li>
-                <li>STORY</li>
-                <li>PROFILE</li>
-            </ul>
-        </nav>
-
-        <div>
+    <nav class="global_nav">
+        <ul class="global_nav_ul">
+            <a href="#" class="global_nav_item">
+                <li>TOP</li></a>
+            <a href="#vision" class="global_nav_item">    
+                <li>VISION</li></a>
+            <a href="#message" class="global_nav_item">
+                <li>MESSAGE</li></a>
+            <a href="#servise" class="global_nav_item">
+                <li>SERVISE</li></a>
+            <a href="#story" class="global_nav_item">   
+                <li>STORY</li></a>
+            <a href="#access" class="global_nav_item">
+                <li>ACCESS</li></a>
+        </ul>
+    </nav>
+    
+    <main class="top_main">
+        <header class="feature_img">
             <div>
                 <h1>vertitulum mauris</h1>
                 <p>最新技術と自然との調和調和を目指す</p>
             </div>
-        </div>
-    </header>
+        </header>
 
-    <section>
-        <article>
-            <div>
-                <h2>VISION</h2>
-                <p>
-                    mamamamamamamamamammamamamamamamamamamammamamamammama<br>
-                    mamamamamamamammamamamamamamammamamamammamammama<br>
-                    mamamamamamamamamamma<br>
-                </p>
-            </div>
-        </article>
+        <section>
+            <article class="section_inner" id="vision">
+                <div>
+                    <h2>VISION</h2>
+                    <p>
+                        mamamamamamamamamammamamamamamamamamamammamamamammama<br>
+                        mamamamamamamammamamamamamamammamamamammamammama<br>
+                        mamamamamamamamamamma<br>
+                    </p>
+                </div>
+            </article>
 
-        <article>
-            <div>
-                <img src="images/sec02_01.jpg">
-                <h2>MESSEGE</h2>
-                <p>mamamamamamamamamammamamamamamamamamamammamamamammama<br>
-                    mamamamamamamammamamamamamamammamamamammamammama<br>
-                    mamamamamamamamamamma<br>
-                </p>
-            </div>
+            <article class="section_inner" id="message">
+                <div>
+                    <img src="images/sec02_01.jpg">
+                    <h2>MESSEGE</h2>
+                    <p>mamamamamamamamamammamamamamamamamamamammamamamammama<br>
+                        mamamamamamamammamamamamamamammamamamammamammama<br>
+                        mamamamamamamamamamma<br>
+                    </p>
+                </div>
 
-            <div>
-                <img src="images/sec02_02.jpg">
-                <h2>MESSEGE</h2>
-                <p>mamamamamamamamamammamamamamamamamamamammamamamammama<br>
-                    mamamamamamamammamamamamamamammamamamammamammama<br>
-                    mamamamamamamamamamma<br>
-                </p>
-            </div>
-        </article>
+                <div>
+                    <img src="images/sec02_02.jpg">
+                    <h2>MESSEGE</h2>
+                    <p>mamamamamamamamamammamamamamamamamamamammamamamammama<br>
+                        mamamamamamamammamamamamamamammamamamammamammama<br>
+                        mamamamamamamamamamma<br>
+                    </p>
+                </div>
+            </article>
 
-        <article>
-            <div>
-                <h2>SERVISE</h2>
-                <img src="images/dips1.jpg">
-                <p>mamamamamamamamamamam<br>
-                mamamamamamamamamamama<br>
-                </p>
-            </div>
-
-            <div>
-                <h2>SERVISE</h2>
-                <img src="images/dips1.jpg">
-                <p>mamamamamamamamamamam<br>
+            <article class="section_inner" id="servise">
+                <div>
+                    <h2>SERVISE</h2>
+                    <img src="images/dips1.jpg">
+                    <p>mamamamamamamamamamam<br>
                     mamamamamamamamamamama<br>
-                </p>
-            </div>
-            
-            <div>
-                <h2>SERVISE</h2>
-                <img src="images/dips1.jpg">
-                <p>mamamamamamamamamamam<br>
-                    mamamamamamamamamamama<br>
-                </p>
-            </div>
-        </article>
+                    </p>
+                </div>
 
-        <article>
-            <div>
-                <h2>STORY</h2>
-                <p>mamamamamamamamamamam<br>
-                    mamamamamamamamamamama<br>
-                </p>
-            </div>
+                <div>
+                    <h2>MESSAGE</h2>
+                    <img src="images/dips1.jpg">
+                    <p>mamamamamamamamamamam<br>
+                        mamamamamamamamamamama<br>
+                    </p>
+                </div>
 
-            <div>
-                <h2>STORY</h2>
-                <p>mamamamamamamamamamam<br>
-                    mamamamamamamamamamama<br>
-                </p>
-            </div>
-        </article>
+                <div>
+                    <h2>STORY</h2>
+                    <img src="images/dips1.jpg">
+                    <p>mamamamamamamamamamam<br>
+                        mamamamamamamamamamama<br>
+                    </p>
+                </div>
+            </article>
 
-        <article>
-            <div>
-                <dl>
-                    <dt>社名</dt>
-                    <dd>sample conpany</dd>
-                </dl>
-                <dl>
-                    <dt>代表取締役</dt>
-                    <dd>見本　太郎</dd>
-                </dl>
-                <dl>
-                    <dt>住所</dt>
-                    <dd>見本県見本市仮区見本町1-3-5</dd>
-                </dl>
-                <dl>
-                    <dt>電話番号</dt>
-                    <dd>03-1234-5678</dd>
-                </dl>
-                <dl>
-                    <dt>設立</dt>
-                    <dd>2022年3月15日</dd>
-                </dl>
-                <dl>
-                    <dt>資本金</dt>
-                    <dd>1,000,000円</dd>
-                </dl>
-                <dl>
-                    <dt>主な取引先</dt>
-                    <dd>見本商事株式会社<br>株式会社年中無休商事<br>株式会社仮弥</dd>
-                </dl>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.354630777931!2d139.4538299330994!3d35.54494291677273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f94baa62c0d3%3A0x46a0037e14fa4b64!2z44CSMTk0LTAwMTMg5p2x5Lqs6YO955S655Sw5biC5Y6f55S655Sw77yU5LiB55uu77yR77yQ4oiS77yS77yQIOOBveOBo-OBveeUuueUsA!5e0!3m2!1sja!2sjp!4v1648018015416!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-        </article>
-    </section>
+            <article class="section_inner" id="story">
+                <div>
+                    <h2>STORY</h2>
+                    <p>mamamamamamamamamamam<br>
+                        mamamamamamamamamamama<br>
+                    </p>
+                </div>
+
+                <div>
+                    <h2>SUCCSESS</h2>
+                    <p>mamamamamamamamamamam<br>
+                        mamamamamamamamamamama<br>
+                    </p>
+                </div>
+            </article>
+
+            <article class="section_inner" id="access">
+                <div>
+                    <dl>
+                        <dt>社名</dt>
+                        <dd>sample conpany</dd>
+                    </dl>
+                    <dl>
+                        <dt>代表取締役</dt>
+                        <dd>見本　太郎</dd>
+                    </dl>
+                    <dl>
+                        <dt>住所</dt>
+                        <dd>見本県見本市仮区見本町1-3-5</dd>
+                    </dl>
+                    <dl>
+                        <dt>電話番号</dt>
+                        <dd>03-1234-5678</dd>
+                    </dl>
+                    <dl>
+                        <dt>設立</dt>
+                        <dd>2022年3月15日</dd>
+                    </dl>
+                    <dl>
+                        <dt>資本金</dt>
+                        <dd>1,000,000円</dd>
+                    </dl>
+                    <dl>
+                        <dt>主な取引先</dt>
+                        <dd>見本商事株式会社<br>株式会社年中無休商事<br>株式会社仮弥</dd>
+                    </dl>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.354630777931!2d139.4538299330994!3d35.54494291677273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f94baa62c0d3%3A0x46a0037e14fa4b64!2z44CSMTk0LTAwMTMg5p2x5Lqs6YO955S655Sw5biC5Y6f55S655Sw77yU5LiB55uu77yR77yQ4oiS77yS77yQIOOBveOBo-OBveeUuueUsA!5e0!3m2!1sja!2sjp!4v1648018015416!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </article>
+        </section>
+    </main>
+
     <footer>
         <p>Copyright(c)20XX Sanple Inc.All Rights Reserved. Design by</p>
         <div>
