--- a/index.html
+++ b/index.html
@@ -138,7 +138,16 @@
                         <dt>主な取引先</dt>
                         <dd>見本商事株式会社<br>株式会社年中無休商事<br>株式会社仮弥</dd>
                     </dl>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.354630777931!2d139.4538299330994!3d35.54494291677273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f94baa62c0d3%3A0x46a0037e14fa4b64!2z44CSMTk0LTAwMTMg5p2x5Lqs6YO955S655Sw5biC5Y6f55S655Sw77yU5LiB55uu77yR77yQ4oiS77yS77yQIOOBveOBo-OBveeUuueUsA!5e0!3m2!1sja!2sjp!4v1648018015416!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div>   
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.354630777931!2d139.4538299330994!3d35.54494291677273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f94baa62c0d3%3A0x46a0037e14fa4b64!2z44CSMTk0LTAwMTMg5p2x5Lqs6YO955S655Sw5biC5Y6f55S655Sw77yU5LiB55uu77yR77yQ4oiS77yS77yQIOOBveOBo-OBveeUuueUsA!5e0!3m2!1sja!2sjp!4v1648018015416!5m2!1sja!2sjp"
+                        width="100%"
+                        height="450"
+                        style="border:0;"
+                        allowfullscreen=""
+                        loading="lazy"
+                    ></iframe>
                 </div>
             </article>
         </section>
