サンプルの文章を日本語に

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <div>
                     <h2>VISION</h2>
                     <p>
-                        mamamamamamamamamammamamamamamamamamamammamamamammama<br>
-                        mamamamamamamammamamamamamamammamamamammamammama<br>
-                        mamamamamamamamamamma<br>
+                        ここにテキストが入ります ここにテキストが入ります<br>
+                        ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります <br>
+                        ここにテキストが入ります<br>
                     </p>
                 </div>
             </article>
@@ -50,18 +50,18 @@
                 <div>
                     <img src="images/sec02_01.jpg">
                     <h2>MESSEGE</h2>
-                    <p>mamamamamamamamamammamamamamamamamamamammamamamammama<br>
-                        mamamamamamamammamamamamamamammamamamammamammama<br>
-                        mamamamamamamamamamma<br>
+                        <p>ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります <br>
+                            ここにテキストが入ります ここにテキストが入ります <br>
+                            ここにテキストが入ります <br>
                     </p>
                 </div>
 
                 <div>
                     <img src="images/sec02_02.jpg">
                     <h2>MESSEGE</h2>
-                    <p>mamamamamamamamamammamamamamamamamamamammamamamammama<br>
-                        mamamamamamamammamamamamamamammamamamammamammama<br>
-                        mamamamamamamamamamma<br>
+                        <p>ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります <br>
+                            ここにテキストが入ります ここにテキストが入ります <br>
+                            ここにテキストが入ります <br>
                     </p>
                 </div>
             </article>
@@ -70,24 +70,24 @@
                 <div>
                     <h2>SERVISE</h2>
                     <img src="images/dips1.jpg">
-                    <p>mamamamamamamamamamam<br>
-                    mamamamamamamamamamama<br>
+                    <p>ここにテキストが入ります<br>
+                        ここにテキストが入ります<br>
                     </p>
                 </div>
 
                 <div>
                     <h2>MESSAGE</h2>
                     <img src="images/dips1.jpg">
-                    <p>mamamamamamamamamamam<br>
-                        mamamamamamamamamamama<br>
+                    <p>ここにテキストが入ります<br>
+                        ここにテキストが入ります<br>
                     </p>
                 </div>
 
                 <div>
                     <h2>STORY</h2>
                     <img src="images/dips1.jpg">
-                    <p>mamamamamamamamamamam<br>
-                        mamamamamamamamamamama<br>
+                    <p>ここにテキストが入ります<br>
+                        ここにテキストが入ります<br>
                     </p>
                 </div>
             </article>
@@ -95,15 +95,15 @@
             <article class="section_inner" id="story">
                 <div>
                     <h2>STORY</h2>
-                    <p>mamamamamamamamamamam<br>
-                        mamamamamamamamamamama<br>
+                    <p>ここにテキストが入ります<br>
+                        ここにテキストが入ります<br>
                     </p>
                 </div>
 
                 <div>
                     <h2>SUCCSESS</h2>
-                    <p>mamamamamamamamamamam<br>
-                        mamamamamamamamamamama<br>
+                    <p>ここにテキストが入ります<br>
+                        ここにテキストが入ります<br>
                     </p>
                 </div>
             </article>
