#messageのスタイル

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="jp">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>task</title>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
@@ -47,22 +48,28 @@
             </article>
 
             <article class="section_inner" id="message">
-                <div>
+                <div class="message_content">
                     <img src="images/sec02_01.jpg">
+
+                    <div class="message_text">
                     <h2>MESSEGE</h2>
                         <p>ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります <br>
                             ここにテキストが入ります ここにテキストが入ります <br>
                             ここにテキストが入ります <br>
                     </p>
                 </div>
+                </div>
 
-                <div>
+                <div class="message_content">
                     <img src="images/sec02_02.jpg">
+
+                    <div class="message_text">
                     <h2>MESSEGE</h2>
                         <p>ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります <br>
                             ここにテキストが入ります ここにテキストが入ります <br>
                             ここにテキストが入ります <br>
                     </p>
+                    </div>
                 </div>
             </article>
 
