#service スタイル修正

--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
         </header>
 
         <section>
-            <article class="section_inner" id="vision">
-                <div>
+            <article class="section_vision" id="vision">
+                <div class="vision_text">
                     <h2>VISION</h2>
                     <p>
-                        ここにテキストが入ります ここにテキストが入ります<br>
-                        ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります <br>
-                        ここにテキストが入ります<br>
+                        ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります <br>
+                        ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります <br>
+                        ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります ここにテキストが入ります<br>
                     </p>
                 </div>
             </article>
 
-            <article class="section_inner" id="message">
+            <article class="section_messeage" id="message">
                 <div class="message_content">
                     <img src="images/sec02_01.jpg">
 
@@ -57,7 +57,7 @@
                             ここにテキストが入ります ここにテキストが入ります <br>
                             ここにテキストが入ります <br>
                     </p>
-                </div>
+                    </div>
                 </div>
 
                 <div class="message_content">
@@ -73,44 +73,49 @@
                 </div>
             </article>
 
-            <article class="section_inner" id="servise">
-                <div>
+            <article class="section_servise" id="servise">
+                <div class="servise_box">
                     <h2>SERVISE</h2>
-                    <img src="images/dips1.jpg">
-                    <p>ここにテキストが入ります<br>
-                        ここにテキストが入ります<br>
+                    <div class="serivice_box_img img_1"></div>
+                    <p>ここにテキストが入りますここにテキストが入ります<br>
+                        ここにテキストが入りますここにテキストが入ります<br>
+                        ここにテキストが入りますここにテキストが入ります<br>
                     </p>
                 </div>
 
-                <div>
+                <div class="servise_box">
                     <h2>MESSAGE</h2>
-                    <img src="images/dips1.jpg">
-                    <p>ここにテキストが入ります<br>
-                        ここにテキストが入ります<br>
+                    <div class="serivice_box_img img_2"></div>
+                    <p>ここにテキストが入りますここにテキストが入ります<br>
+                        ここにテキストが入りますここにテキストが入ります<br>
+                        ここにテキストが入りますここにテキストが入ります<br>
                     </p>
                 </div>
 
-                <div>
+                <div class="servise_box">
                     <h2>STORY</h2>
-                    <img src="images/dips1.jpg">
-                    <p>ここにテキストが入ります<br>
-                        ここにテキストが入ります<br>
+                    <div class="serivice_box_img img_3"></div>
+                    <p>ここにテキストが入りますここにテキストが入ります<br>
+                        ここにテキストが入りますここにテキストが入ります<br>
+                        ここにテキストが入りますここにテキストが入ります<br>
                     </p>
                 </div>
             </article>
 
-            <article class="section_inner" id="story">
-                <div>
-                    <h2>STORY</h2>
-                    <p>ここにテキストが入ります<br>
-                        ここにテキストが入ります<br>
+            <article class="section_story" id="story">
+                <div class="story">
+                    <h2 >STORY</h2>
+                    <p>ここにテキストが入ります ここにテキストが入ります<br>
+                        ここにテキストが入ります ここにテキストが入ります<br>
+                        ここにテキストが入ります ここにテキストが入ります<br>
                     </p>
                 </div>
 
-                <div>
+                <div class="story">
                     <h2>SUCCSESS</h2>
-                    <p>ここにテキストが入ります<br>
-                        ここにテキストが入ります<br>
+                    <p>ここにテキストが入ります ここにテキストが入ります<br>
+                        ここにテキストが入りますここにテキストが入ります<br>
+                        ここにテキストが入ります ここにテキストが入ります<br>
                     </p>
                 </div>
             </article>
