pcとタブレット時は左右に余白

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     </nav>
     
     <main class="top_main">
-        <header class="feature_img">
-            <div>
-                <h1>vertitulum mauris</h1>
-                <p>最新技術と自然との調和調和を目指す</p>
+        <header class="feature_img_wrapper">
+            <div class="feature_img">
+                <div>
+                    <h1>vertitulum mauris</h1>
+                    <p>最新技術と自然との調和調和を目指す</p>
+                </div>
             </div>
         </header>
 
