モバイル時のメニュー

--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="font" rel="styleseet">
+    <link rel="stylesheet" href="./plugins/jquery-fatNav-master/dist/jquery.fatNav.css">
 </head>
 
 <body>
     <nav class="global_nav">
+        <div class="fat-nav">
+            <div class="fat-nav__wrapper">
+                <ul>
+                    <li><a href="#">TOP</a></li>
+                    <li><a href="#vision">VISION</a></li>
+                    <li><a href="#message">MESSAGE</a></li>
+                    <li><a href="#servise">SERVISE</a></li>
+                    <li><a href="#story">STORY</a></li>
+                    <li><a href="#access">ACCESS</a></li>
+                </ul>
+            </div>
+        </div>
+
         <ul class="global_nav_ul">
             <a href="#" class="global_nav_item">
                 <li>TOP</li></a>
@@ -175,5 +189,11 @@
             <a href="http://f-tpl.2z44CSMTk0LTAwMTMg5p2x5Lqs6YO955S655Sw5biC5Y6f55S655Sw77yU5LiB55uu77yR77yQ4oiS77yS77yQIOOBveOBo-OBveeUuueUsA">http://f-tpl.com</a>
         </div>
     </footer>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="./plugins/jquery-fatNav-master/dist/jquery.fatNav.min.js"></script>
+    <script>
+        $.fatNav();
+    </script>
 </body>
 </html>
