--- a/index.html
+++ b/index.html
@@ -137,55 +137,55 @@
             </article>
 
             <article class="section_access" id="access">
-                <div class="access">
-                    <table class="access_text" >
-                        <tr class="text">
-                            <th>社名</th>
-                            <td>sample conpany</td>
-                        </tr>
-                        <tr class="text">
-                            <th>代表取締役</th>
-                            <td>見本　太郎</td>
-                        </tr>
-                        <tr class="text">
-                            <th>住所</th>
-                            <td>見本県見本市仮区見本町1-3-5</td>
-                        </tr>
-                        <tr class="text">
-                            <th>電話番号</th>
-                            <td>03-1234-5678</td>
-                        </tr>
-                        <tr class="text">
-                            <th>設立</th>
-                            <td>2022年3月15日</td>
-                        </tr>
-                        <tr class="text">
-                            <th>資本金</th>
-                            <td>1,000,000円</td>
-                        </tr>
-                        <tr class="text">
-                            <th>主な取引先</th>
-                            <td>見本商事株式会社<br>株式会社年中無休商事<br>株式会社仮弥</td>
-                        </tr>
-                    </table> 
-                </div>
-                <div class="access">   
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.354630777931!2d139.4538299330994!3d35.54494291677273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f94baa62c0d3%3A0x46a0037e14fa4b64!2z44CSMTk0LTAwMTMg5p2x5Lqs6YO955S655Sw5biC5Y6f55S655Sw77yU5LiB55uu77yR77yQ4oiS77yS77yQIOOBveOBo-OBveeUuueUsA!5e0!3m2!1sja!2sjp!4v1648018015416!5m2!1sja!2sjp"
-                        width="100%"
-                        height="300"
-                        style="border:0;"
-                        allowfullscreen=""
-                        loading="lazy"
-                    ></iframe>
-                </div>
+                    <div class="access">
+                        <table class="access_text" >
+                            <tr class="text">
+                                <th>社名</th>
+                                <td>sample conpany</td>
+                            </tr>
+                            <tr class="text">
+                                <th>代表取締役</th>
+                                <td>見本　太郎</td>
+                            </tr>
+                            <tr class="text">
+                                <th>住所</th>
+                                <td>見本県見本市仮区見本町1-3-5</td>
+                            </tr>
+                            <tr class="text">
+                                <th>電話番号</th>
+                                <td>03-1234-5678</td>
+                            </tr>
+                            <tr class="text">
+                                <th>設立</th>
+                                <td>2022年3月15日</td>
+                            </tr>
+                            <tr class="text">
+                                <th>資本金</th>
+                                <td>1,000,000円</td>
+                            </tr>
+                            <tr class="text">
+                                <th>主な取引先</th>
+                                <td><a href="#">見本商事株式会社</a><br><a href="#">株式会社年中無休商事</a><br><a href="#">株式会社仮弥</td></a>
+                            </tr>
+                        </table> 
+                    </div>
+                    <div class="access">   
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.354630777931!2d139.4538299330994!3d35.54494291677273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f94baa62c0d3%3A0x46a0037e14fa4b64!2z44CSMTk0LTAwMTMg5p2x5Lqs6YO955S655Sw5biC5Y6f55S655Sw77yU5LiB55uu77yR77yQ4oiS77yS77yQIOOBveOBo-OBveeUuueUsA!5e0!3m2!1sja!2sjp!4v1648018015416!5m2!1sja!2sjp"
+                            width="100%"
+                            height="330"
+                            style="border:0;"
+                            allowfullscreen=""
+                            loading="lazy"
+                        ></iframe>
+                    </div>
             </article>
         </section>
     </main>
 
     <footer>
         <p>Copyright(c)20XX Sanple Inc.All Rights Reserved. Design by</p>
-        <div>
+        <div class="footer_http">
             <a href="http://f-tpl.2z44CSMTk0LTAwMTMg5p2x5Lqs6YO955S655Sw5biC5Y6f55S655Sw77yU5LiB55uu77yR77yQ4oiS77yS77yQIOOBveOBo-OBveeUuueUsA">http://f-tpl.com</a>
         </div>
     </footer>
