--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <header class="feature_img_wrapper">
             <div class="feature_img">
                 <div>
-                    <h1>vertitulum mauris</h1>
+                    <h1>Vestitulum mauris</h1>
                     <p>最新技術と自然との調和調和を目指す</p>
                 </div>
             </div>
@@ -93,27 +93,27 @@
                 <div class="servise_box">
                     <h2>SERVISE</h2>
                     <div class="serivice_box_img img_1"></div>
-                    <p>ここにテキストが入りますここにテキストが入ります<br>
-                        ここにテキストが入りますここにテキストが入ります<br>
-                        ここにテキストが入りますここにテキストが入ります<br>
+                    <p>ここにテキストが入りますここにテキストが入ります
+                        ここにテキストが入りますここにテキストが入ります
+                        ここにテキストが入りますここにテキストが入ります
                     </p>
                 </div>
 
                 <div class="servise_box">
                     <h2>MESSAGE</h2>
                     <div class="serivice_box_img img_2"></div>
-                    <p>ここにテキストが入りますここにテキストが入ります<br>
-                        ここにテキストが入りますここにテキストが入ります<br>
-                        ここにテキストが入りますここにテキストが入ります<br>
+                    <p>ここにテキストが入りますここにテキストが入ります
+                        ここにテキストが入りますここにテキストが入ります
+                        ここにテキストが入りますここにテキストが入ります
                     </p>
                 </div>
 
                 <div class="servise_box">
                     <h2>STORY</h2>
                     <div class="serivice_box_img img_3"></div>
-                    <p>ここにテキストが入りますここにテキストが入ります<br>
-                        ここにテキストが入りますここにテキストが入ります<br>
-                        ここにテキストが入りますここにテキストが入ります<br>
+                    <p>ここにテキストが入りますここにテキストが入ります
+                        ここにテキストが入りますここにテキストが入ります
+                        ここにテキストが入りますここにテキストが入ります
                     </p>
                 </div>
             </article>
