accessからfrofileに変更

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#message">MESSAGE</a></li>
                     <li><a href="#servise">SERVISE</a></li>
                     <li><a href="#story">STORY</a></li>
-                    <li><a href="#access">ACCESS</a></li>
+                    <li><a href="#profile">PROFILE</a></li>
                 </ul>
             </div>
         </div>
@@ -36,8 +36,8 @@
                 <li>SERVISE</li></a>
             <a href="#story" class="global_nav_item">   
                 <li>STORY</li></a>
-            <a href="#access" class="global_nav_item">
-                <li>ACCESS</li></a>
+            <a href="#profile" class="global_nav_item">
+                <li>PROFILE</li></a>
         </ul>
     </nav>
     
@@ -136,12 +136,12 @@
                 </div>
             </article>
 
-            <article class="section_access" id="access">
-                    <div class="access">
-                        <table class="access_text" >
+            <article class="section_profile" id="profile">
+                    <div class="profile">
+                        <table class="profile_text" >
                             <tr class="text">
                                 <th>社名</th>
-                                <td>sample conpany</td>
+                                <td>sample company</td>
                             </tr>
                             <tr class="text">
                                 <th>代表取締役</th>
@@ -164,16 +164,24 @@
                                 <td>1,000,000円</td>
                             </tr>
                             <tr class="text">
-                                <th>主な取引先</th>
-                                <td><a href="#">見本商事株式会社</a><br><a href="#">株式会社年中無休商事</a><br><a href="#">株式会社仮弥</td></a>
+                                <th rowspan="3">主な取引先</th>
+                                <td><a href="#">見本商事株式会社</a></td>
+                            </tr>
+                            <tr class="text">  
+                                <th></th>
+                                <td><a href="#">株式会社年中無休商事</a></td>
+                            </tr>
+                            <tr class="text"> 
+                                <th></th>
+                                <td><a href="#">株式会社仮弥</a></td>
                             </tr>
                         </table> 
                     </div>
-                    <div class="access">   
+                    <div class="profile">   
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.354630777931!2d139.4538299330994!3d35.54494291677273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f94baa62c0d3%3A0x46a0037e14fa4b64!2z44CSMTk0LTAwMTMg5p2x5Lqs6YO955S655Sw5biC5Y6f55S655Sw77yU5LiB55uu77yR77yQ4oiS77yS77yQIOOBveOBo-OBveeUuueUsA!5e0!3m2!1sja!2sjp!4v1648018015416!5m2!1sja!2sjp"
                             width="100%"
-                            height="330"
+                            height="400"
                             style="border:0;"
                             allowfullscreen=""
                             loading="lazy"
